# freelens

./: .gitattributes  DATASET.md  LICENSE  README.md  demo_detect.py  demo_maketag.py  freelens.py  pyproject.toml  requirements.txt  requirements_build.txt
dataset/: DATASET.md
examples/: detect.py  maketag.py
freelens/: __init__.py
